# AI-Agenti-hw

hw-02/: AI_Agenti_hw02.json  README.md  test-workflow.json
hw-02/sql_inicialization/: parking-data.sql
hw-03/: .gitignore  Containerfile  README-container.md  README.md  main.py  pyproject.toml
